--- a/proiectWeb/index.html
+++ b/proiectWeb/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Welcome</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" type="image/x-icon" href="css/images/favicon.ico">
+
 </head>
 
 <body>
@@ -13,8 +15,8 @@
         <div class="header">
             <div class="titlu">Pla<span class="cletter">c<div class="image"></div></span><span class="oletter">o</span></div>
             <div class="buttons">
-                <button class="login">Login</button>
-                <button class="signup">Sign Up</button>
+                <button class="login" onclick="location.href = 'login.html';">Login</button>
+                <button class="signup" onclick="location.href = 'signup.html';">Sign Up</button>
             </div>
         </div>
         <div class="middle">
