--- a/proiectWeb/login.html
+++ b/proiectWeb/login.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
   <link rel="stylesheet" href="css/login.css">
-  <script src="scripts/login.js"></script>
+  <link rel="icon" type="image/x-icon" href="css/images/favicon.ico">
 </head>
 <body>
   <div class="container">
     <div class="login-box">
       <h2>Login</h2>
-      <form>
+      <form action="afterlog.html">
         <div class="user-box">
           <input type="text" name="username" required>
           <label>Username</label>
@@ -20,10 +20,12 @@
           <input type="password" name="password" required>
           <label>Password</label>
         </div>
-        <a href="#">
-          Login
-        </a>
+        <button class="login">Login</button>
       </form>
+      <div class="sign-box">
+        <p>Don't have an account already?</p>
+        <a href="signup.html" class="logref">Create an account</a>
+      </div>
     </div>
   </div>
 </body>
