--- a/proiectWeb/houses.html
+++ b/proiectWeb/houses.html
@@ -33,7 +33,7 @@
             
             <h2>Houses Construction</h2>
 
-            <a href="afterlog.html" class="titlu">Pla<span class="cletter">c<div class="image"></div></span><span class="oletter">o</span></a>
+            <a href="afterlog.html" class="titlu">Pla<div class="cletter">c<div class="image"></div></div><span class="oletter">o</span></a>
 
         </div>
         <div class="middle">
@@ -41,7 +41,7 @@
                 <h1>Motto: <q>Your house, Our priority</q></h1>
                 <div class="description" id="description">
                     <h3>Description</h3>
-                    <img src="css/images/casalog.jpg"></img>
+                    <img src="css/images/casalog.jpg" alt="casalog"> 
                     <p>Welcome to the genesis of your dream home – where imagination meets craftsmanship, and aspirations take shape. <br>
                         Here, amidst the raw potential of an empty plot, we lay the cornerstone of your future sanctuary. <br> 
                         With each swing of the hammer and every calculated measurement, we embark on a journey of creation, building not just a house, but a haven – a space uniquely tailored to your vision and lifestyle.<br> 
@@ -82,13 +82,13 @@
                         <h4>3. Framing the Home</h4>
                         <p id="step3">
                            This is where it starts to get really exciting! With the wooden framing, you can literally see your home taking shape and notice that excellent floorplan you selected come to life.<br>
-                            There’s quite a lot involved in this step:
+                            There’s quite a lot involved in this step:</p>
                             <ul>
                                 <li>Floor joists are installed as well as the subfloor</li>
                                 <li>Windows and doors are also installed</li>
                                 <li>A house wrap is put over the exterior to prevent water and moisture from getting into the home</li>
                             </ul>
-                            This has a secondary function of improving the home’s energy efficiency by helping the insulation work better, keeping your home cool in the summer, and warm in the winter.
+                            <p>This has a secondary function of improving the home’s energy efficiency by helping the insulation work better, keeping your home cool in the summer, and warm in the winter.
                         </p>
 
                         <h4>4. Installing HVAC, Plumbing, and Electrical</h4>
@@ -131,20 +131,20 @@
                     <p>Discover a collection of meticulously crafted house models, each designed to cater to diverse tastes and lifestyles. From cozy cottages exuding charm to sleek modern marvels embracing minimalist elegance, our range of models offers something for every discerning homeowner. Whether you crave the intimacy of a bungalow, the sophistication of a townhouse, or the spaciousness of a villa, our diverse portfolio ensures that your ideal home awaits.<br>
                         Explore our selection and find the perfect embodiment of your aspirations.<br>
                         Welcome home.</p>
-                    <img src="css/images/casa1.jpg"></img>
-                    <img src="css/images/casa2.jpg"></img><br>
-                    <img src="css/images/casa3.jpg"></img>
-                    <img src="css/images/casa4.jpg"></img>
+                    <img src="css/images/casa1.jpg" alt="casa1"> 
+                    <img src="css/images/casa2.jpg" alt="casa2"> <br>
+                    <img src="css/images/casa3.jpg" alt="casa3"> 
+                    <img src="css/images/casa4.jpg" alt="casa4"> 
                 </div>
 
 
                 <div class="photos" id="photos">
                     <h3>Photos</h3>
-                    <img src="css/images/constlog.webp"></img><br>
-                    <img src="css/images/poza1.jpg"></img>
-                    <img src="css/images/poza2.jpg"></img>
-                    <img src="css/images/poza3.jpg"></img>
-                    <img src="css/images/poza4.jpg"></img>
+                    <img src="css/images/constlog.webp" alt="constlog.web"> <br>
+                    <img src="css/images/poza1.jpg" alt="poza1"> 
+                    <img src="css/images/poza2.jpg" alt="poza2"> 
+                    <img src="css/images/poza3.jpg" alt="poza3"> 
+                    <img src="css/images/poza4.jpg" alt="poza4"> 
                     <br>
                 </div>
 
@@ -184,7 +184,8 @@
             <p>Copyright &copy; Team PlaCo</p>
         </div>
     </div>
-</body>
+    
 <script src="scripts/circle.js"></script>
 <script src="scripts/toggle.js"></script>
+</body>
 </html>
