--- a/proiectWeb/about.html
+++ b/proiectWeb/about.html
@@ -18,8 +18,8 @@
     <div role="contentinfo">
         <dl>
             <dt>Authors</dt>
-            <a href="https://github.com/SimilachiAndrei" target="_blank">Similachi Andrei-Felix</a><br>
-            <a href="https://github.com/dumisorohan" target="_blank">Sorohan Dumitrita</a><br>
+            <dd><a href="https://github.com/SimilachiAndrei" target="_blank">Similachi Andrei-Felix</a></dd>
+            <dd><a href="https://github.com/dumisorohan" target="_blank">Sorohan Dumitrita</a></dd>
         </dl>
     </div>
     <section typeof="sa:Abstract" id="abstract" role="doc-abstract">
@@ -64,9 +64,9 @@
         <section id="perspective">
             <h3>Perspectiva</h3>
             <p>
-                Aplicatia Web Placo este o aplicatie web ce are ca scop punerea in legatura a 
+                Aplicatia Web Placo este o aplicatie web ce are ca scop punerea in legatura a
                 profesionistilor in constructii cu eventualii beneficiari prin intermediul acesteia.
-                
+
             </p>
         </section>
 
@@ -74,6 +74,7 @@
             <h3>Functiile Produsului</h3>
             <p>
                 Mai jos sunt functionalitatile pe care aplicatia Placo le ofera.
+            </p>
             <ul>
                 <li>Crearea unui cont si inregistrarea unui utilizator de tip firma sau client</li>
                 <li>Modificarea datelor asociate utilizatorului</li>
@@ -96,7 +97,8 @@
                 general , care o gestioneaza.
             </p>
             <p>
-                Aplicatia fiind una web necesita conexiune la internet, ceea ce inseamna ca orice utilizator ce nu are acces
+                Aplicatia fiind una web necesita conexiune la internet, ceea ce inseamna ca orice utilizator ce nu are
+                acces
                 la
                 internet nu va putea folosi aplicatia.
             </p>
@@ -116,7 +118,7 @@
                 placuta utilizatorului datorita design-ului responsive.
             </p>
             <p>
-                In cadrul aplicatiei, utilizatorul poate avea doua tipuri de cont, unul de client si unul de 
+                In cadrul aplicatiei, utilizatorul poate avea doua tipuri de cont, unul de client si unul de
                 antreprenor general pentru o firma,
                 astfel pentru anumite pagini exista o interfata diferita in functie de tipul de cont.
             </p>
@@ -138,7 +140,8 @@
                 Commiturile sunt realizate de ambrii membri ai echipei.
             </p>
             <p>
-                Codul sursa al proiectului va fi disponibil <a href="https://github.com/SimilachiAndrei/TW_Similachi_Andrei_A3_Sorohan_Dumitrita_A2"
+                Codul sursa al proiectului va fi disponibil <a
+                    href="https://github.com/SimilachiAndrei/TW_Similachi_Andrei_A3_Sorohan_Dumitrita_A2"
                     target="_blank">aici</a>
                 atunci cand va fi facut public.
             </p>
