--- a/proiectWeb/index.html
+++ b/proiectWeb/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="titlu">Pla<span class="cletter">c<div class="image"></div></span><span class="oletter">o</span></div>
+            <div class="titlu">Pla<div class="cletter">c<div class="image"></div></div><span class="oletter">o</span></div>
             <div class="buttons">
                 <button class="login" onclick="location.href = 'login.html';">Login</button>
                 <button class="signup" onclick="location.href = 'signup.html';">Sign Up</button>
@@ -21,7 +21,8 @@
         </div>
         <div class="middle">
             <div class="content">
-                <h3>Welcome To Placo!<br><p>Here we help you build the project of your dreams!</p></h3>
+                <h3>Welcome To Placo!</h3>
+                <p>Here we help you build the project of your dreams!</p>
             </div>
         </div>
         <div class="footer">
