--- a/proiectWeb/signup.html
+++ b/proiectWeb/signup.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container">
-    <a href="index.html" class="titlu">Pla<span class="cletter">c<div class="image"></div></span><span
+    <a href="index.html" class="titlu">Pla<div class="cletter">c<div class="image"></div></div><span
         class="oletter">o</span></a>
     <div class="login-box">
       <h2>Sign Up</h2>
@@ -26,8 +26,8 @@
         </div>
         <div class="dot-box">
           <label>Are you a client or a company?</label>
-          <input type="radio" name="type" value="client" required />Client
-          <input type="radio" name="type" value="company" required />Company
+          <input type="radio" name="type" value="client" required >Client
+          <input type="radio" name="type" value="company" required >Company
         </div>
         <div class="user-box">
           <input type="email" name="email" placeholder="Enter an email" required>
@@ -35,7 +35,7 @@
         </div>
         <div id="companyFields">
           <div class="user-box">
-            <input type="text" name="companyName" placeholder="Enter the company name"required>
+            <input type="text" name="companyName" placeholder="Enter the company name" required>
             <label>Company Name</label>
           </div>
           <div class="user-box">
@@ -59,7 +59,7 @@
       </div>
     </div>
   </div>
+  <script src="scripts/toggleFields.js"></script>
 </body>
-<script src="scripts/toggleFields.js"></script>
 
 </html>
