--- a/proiectWeb/login.html
+++ b/proiectWeb/login.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="container">
-    <a href="index.html" class="titlu">Pla<span class="cletter">c<div class="image"></div></span><span class="oletter">o</span></a>
+    <a href="index.html" class="titlu">Pla<div class="cletter">c<div class="image"></div></div><span class="oletter">o</span></a>
     <div class="login-box">
       <h2>Login</h2>
       <form action="afterlog.html">
