--- a/proiectWeb/companies.html
+++ b/proiectWeb/companies.html
@@ -58,6 +58,13 @@
                     </div>
                 </div>
 
+                <div class="description" id="description">
+                    <p>
+                        Only one click away lies your best decision!<br>
+                        Choose the right company for your needs and forget about the hassle of construction!
+                    </p>
+                </div>
+
                 <div class="company-grid">
                     <div class="company">
                         <a href="houses.html">
@@ -75,6 +82,14 @@
                         <a href="instalatii.html">
                             <img src="css/images/company4.jpg" alt="Instalatii">Instalations</a>
                     </div>
+                </div>
+                <div class="contact" id="contact">
+                    <br>
+                    <h3>Contact</h3>
+                    <p>
+                        Tel: 0712 345 678 <br>
+                        E-mail: help.placo@mail.com
+                    </p>
                 </div>
             </div>
         </div>
