--- a/proiectWeb/companies.html
+++ b/proiectWeb/companies.html
@@ -15,9 +15,9 @@
             <nav class="menu">
                 <ul>
                     <li><a href="myacc.html">My Account</a></li>
-                    <li><a href="#description">Description</a></li>
-                    <li><a href="#contact">Contact</a></li>
                     <li><a href="about.html">About</a></li>
+                    <li class="ref1"><a href="#description">Description</a></li>
+                    <li class="ref2"><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="menu-toggle">
                     <span></span>
@@ -28,7 +28,12 @@
             
             
             <h2>Construction Companies</h2>
-
+            <nav class="menu">
+                <ul>
+                    <li><a href="#description">Description</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
             <a href="afterlog.html" class="titlu">Pla<div class="cletter">c<div class="image"></div></div><span class="oletter">o</span></a>
 
         </div>
