--- a/proiectWeb/companies.html
+++ b/proiectWeb/companies.html
@@ -76,11 +76,11 @@
                             <img src="css/images/company1.jpg" alt="HousesCompany">Houses</a>
                     </div>
                     <div class="company">
-                        <a href="#exterior.html">
+                        <a href="exterior.html">
                             <img src="css/images/company2.jpg" alt="ExternDesign">Exterior Design</a>
                     </div>
                     <div class="company">
-                        <a href="#interior.html">
+                        <a href="interior.html">
                             <img src="css/images/company3.jpg" alt="InternDesign">Interior Design</a>
                     </div>
                     <div class="company">
