--- a/proiectWeb/instalatii.html
+++ b/proiectWeb/instalatii.html
@@ -16,12 +16,12 @@
                 <ul>
                     <li><a href="myacc.html">My Account</a></li>
                     <li><a href="companies.html">Companies</a></li>
-                    <li><a href="#description">Description</a></li>
-                    <li><a href="#models">Models</a></li>
-                    <li><a href="#photos">Photos</a></li>
-                    <li><a href="#reviews">Reviews</a></li>
-                    <li><a href="#contact">Contact</a></li>
                     <li><a href="about.html">About</a></li>
+                    <li class="ref"><a href="#description">Description</a></li>
+                    <li class="ref"><a href="#models">Models</a></li>
+                    <li class="ref"><a href="#photos">Photos</a></li>
+                    <li class="ref"><a href="#reviews">Reviews</a></li>
+                    <li class="ref"><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="menu-toggle">
                     <span></span>
@@ -31,7 +31,15 @@
             </nav>
             
             <h2>Installations</h2>
-
+            <nav class="menu">
+                <ul>
+                    <li><a href="#description">Description</a></li>
+                    <li><a href="#models">Models</a></li>
+                    <li><a href="#photos">Photos</a></li>
+                    <li><a href="#reviews">Reviews</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
             <a href="afterlog.html" class="titlu">Pla<div class="cletter">c<div class="image"></div></div><span class="oletter">o</span></a>
 
         </div>
