--- a/tw/public/Contents/login.html
+++ b/tw/public/Contents/login.html
@@ -11,10 +11,11 @@
 
 <body>
   <div class="container">
-    <a href="/" class="titlu">Pla<div class="cletter">c<div class="image"></div></div><span class="oletter">o</span></a>
+    <a href="/" class="titlu">Pla<div class="cletter">c<div class="image"></div>
+      </div><span class="oletter">o</span></a>
     <div class="login-box">
       <h2>Login</h2>
-      <form method="POST" action="/login">
+      <form id="loginForm" method="POST" action="/login">
         <div class="user-box">
           <input type="text" name="username" required>
           <label>Username</label>
@@ -31,6 +32,7 @@
       </div>
     </div>
   </div>
+
 </body>
 
 </html>
