--- a/tw/public/Contents/afterlog.html
+++ b/tw/public/Contents/afterlog.html
@@ -120,7 +120,7 @@
                     licitateButton.className = 'post'; // Correct class name to 'post'
                     licitateButton.textContent = 'Licitate'; // Set button text content to 'Licitate'
                     licitateButton.onclick = function () {
-                        location.href = '/licitate';
+                        location.href = '/licitations';
                     };
                     buttonsContainer.appendChild(licitateButton); // Append the correct button element
                 }
