--- a/tw/public/Contents/myprojects.html
+++ b/tw/public/Contents/myprojects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Image Upload</title>
-    <link rel="stylesheet" href="/Contents/css/myproject.css">
+    <link rel="stylesheet" href="/Contents/css/myaccount.css">
     <link rel="icon" type="image/x-icon" href="/Contents/css/images/favicon.ico">
 </head>
 <body>
@@ -40,7 +40,7 @@
                 <form id="imageUploadForm">
                     <label for="phaseId">Select Project Phase:</label>
                     <select id="phaseId" name="phaseId" required>
-                        <option value="" disabled selected>Select a phase</option>
+                        <!-- Options will be dynamically populated -->
                     </select>
                     <label for="imageFile">Choose Image File:</label>
                     <input type="file" id="imageFile" name="imageFile" accept="image/*" required>
