--- a/refactoredProject/public/Contents/myprojects.html
+++ b/refactoredProject/public/Contents/myprojects.html
@@ -46,7 +46,9 @@
                         <input type="file" id="imageFile" name="imageFile" accept="image/*" required>
                         <button type="submit">Finish Project</button>
                     </form>
+                    <button id="renounceProjectButton">Renounce Project</button>
                 </div>
+
             </div>
         </div>
 
@@ -57,6 +59,7 @@
 
     <script src="/Contents/scripts/toggle.js"></script>
     <!-- <script src="/Contents/scripts/myaccEventListeners.js"></script> -->
+    <script src="/Contents/scripts/renounceEventListener.js"></script>
     <script src="/Contents/scripts/projectImageUpload.js"></script>
 </body>
 
