--- a/refactoredProject/public/Contents/myacc.html
+++ b/refactoredProject/public/Contents/myacc.html
@@ -104,13 +104,15 @@
             })
                 .then(response => {
                     if (!response.ok) {
-                        throw new Error('Network response was not ok');
+                        location.reload();
+                        throw new Error('Password could not be changed!');
                     }
                     return response.json();
                 })
                 .then(data => {
                     console.log('PUT request successful:', data);
-                    alert(data.message || 'Password changed successfully');
+                    alert(data.message);
+                    location.reload();
                 })
                 .catch(error => {
                     console.error('Error in PUT request:', error);
