--- a/refactoredProject/public/Contents/reset-password.html
+++ b/refactoredProject/public/Contents/reset-password.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password</title>
+    <link rel="stylesheet" href="/Contents/css/resetPassword.css">
 </head>
+
 <body>
-    <h2>Reset Your Password</h2>
-    <form id="resetPasswordForm">
-        <input type="password" id="newPassword" required placeholder="Enter new password">
-        <input type="password" id="confirmPassword" required placeholder="Confirm new password">
-        <button type="submit">Reset Password</button>
-    </form>
+    <div class="container">
+        <div class="middle">
+            <h2>Reset Your Password</h2>
+            <form id="resetPasswordForm">
+                <input type="password" id="newPassword" required placeholder="Enter new password">
+                <input type="password" id="confirmPassword" required placeholder="Confirm new password">
+                <button type="submit">Reset Password</button>
+            </form>
+        </div>
+    </div>
 
     <script>
         document.getElementById('resetPasswordForm').addEventListener('submit', async (e) => {
@@ -49,5 +56,7 @@
             }
         });
     </script>
+
 </body>
+
 </html>
